# ctor

./: README.md
ctor/: Cargo.toml
ctor/src/: example.rs  lib.rs
tests/: Cargo.toml
tests/src/: dylib.rs  dylib_load.rs  lib.rs
