[package]
name = "ctor-used-linker"
version = "0.2.0"
authors = ["Matt Mastracci <matthew@mastracci.com>"]
edition = "2018"
description = "__attribute__((constructor)) for Rust"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/fbsource/ctor"
readme = "../README.md"

[dependencies]
quote = "1.0.20"

[dependencies.syn]
version = "2.0.12"
features = ["full", "parsing", "printing", "proc-macro"]
default-features = false

[dev-dependencies]
libc-print = "0.1.20"

[lib]
name = "ctor"
proc-macro = true

[[example]]
name = "example"
path = "src/example.rs"
